--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-5FKNViujeM?controls=0autoplay=1" allow="autoplay" title="YouTube video player"></iframe>
+    <h3 id="arrowHeader">Use Arrow Keys to Move</h3>
+    <button id="startBtn">Start</button>
     <script src="index.js"></script>
 </body>
 </html>
