--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h3 id="arrowHeader">Use Arrow Keys to Move</h3>
+    <p id="pauseBtn">Pause Music | |</p>
     <button id="startBtn">Start</button>
     <script src="index.js"></script>
 </body>
