restrict FPS to delta time

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h3 id="arrowHeader">Use Arrow Keys to Move</h3>
     <p id="pauseBtn">Pause Music | |</p>
     <button id="startBtn">Start</button>
+    <script src="updates.js"></script>
+    <script src="animations.js"></script>
+    <script src="functions.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
