--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     </div>
     <script src="updates.js"></script>
     <script src="animations.js"></script>
-    <script src="functions.js"></script>
+    <script src="helpers.js"></script>
     <script src="npc.js"></script>
+    <script src="collision.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
